# neo4j_text2SQL

./: .env.example  .env_initAuraPro.example  .gitignore  LLM.py  LLM_only.py  README.md  agent.py  fulltest.py  init.py  loadBusinessGlossary.py  loadSQLSchema2Neo.py  manageInstance.py  neo4j_text2sql_cli.py  postgres_testCNX.py  pyproject.toml  reload.py  requirements.txt  run_load.py  semanticLayer.py  setupAura.py  streamlit_app.py  testSemanticLayer.py  yaml_LLM.py
api/: main.py
aura/: setupAura.py
data/: addDBData.sql  business_glossary.json  database_schema.md  database_schema.yaml  newTables.sql  reference_questions.json  transactionLog.csv
load/: __init__.py  enrichDB.py  loadBusinessGlossary.py  loadSQLSchema2Neo.py  loadTransactionsLog.py  postgreSQL_init.py
neo4jHelpers/: database.py
tests/: fulltest.py
tools/: dummyTool.py  postgresql.py  postgresqlTool.py  semanticLayer.py  semanticLayerTool.py  staticContext.py  staticContextTool.py
